Add support for cleaner-looking imports

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,16 @@
   "rules": {
     "comma-dangle": ["error", "never"],
     "semi": 0,
+    "import/no-extraneous-dependencies": 0,
     "react/prefer-stateless-function": 0,
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }]
+  },
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": "config/webpack.dev.config"
+      }
+    }
   }
 }
