Tie redux logger to local storage This way, we can turn on redux logger in production to help with debugging. Huge shoutout to Ethan for the idea.

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "comma-dangle": ["error", "never"],
     "semi": 0,
     "import/no-extraneous-dependencies": 0,
+    "import/prefer-default-export": 0,
     "react/prefer-stateless-function": 0,
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }]
